header-to-script

--- a/applications.html
+++ b/applications.html
@@ -8,21 +8,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="main-header">
-        <div class="header-container">
-            <div class="logo">
-                <h1>Система учета пропусков</h1>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="applications.html" class="active">Заявки</a></li>
-                    <li><a href="profile.html">Профиль</a></li>
-                    <li><a href="#" id="logout-btn">Выход</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header class="main-header"></header>
 
     <div class="container">
         <div class="applications-container">
@@ -67,6 +53,7 @@
         </div>
     </div>
 
+    <script src="assets/js/header.js"></script>
     <script src="assets/js/applications.js"></script>
 </body>
 </html>
