--- a/profile.html
+++ b/profile.html
@@ -8,20 +8,7 @@
 </head>
 <body>
     <!-- Добавляем header -->
-    <header class="main-header">
-        <div class="header-container">
-            <div class="logo">
-                <h1>Система учета пропусков</h1>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="profile.html" class="active">Профиль</a></li>
-                    <li><a href="#" id="logout-btn">Выход</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header class="main-header"></header>
 
     <div class="container">
         <div class="profile-container">
@@ -38,5 +25,6 @@
     </div>
 
     <script src="assets/js/profile.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
