--- a/registration.html
+++ b/registration.html
@@ -8,20 +8,7 @@
 </head>
 <body>
     <!-- Добавляем header -->
-    <header class="main-header">
-        <div class="header-container">
-            <div class="logo">
-                <h1>Система учета пропусков</h1>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="login.html">Вход</a></li>
-                    <li><a href="registration.html" class="active">Регистрация</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header class="main-header"></header>
 
     <div class="container">
         <div class="auth-form-container">
@@ -71,5 +58,6 @@
     </div>
     
     <script src="assets/js/registration.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
