--- a/login.html
+++ b/login.html
@@ -8,20 +8,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="main-header">
-        <div class="header-container">
-            <div class="logo">
-                <h1>Система учета пропусков</h1>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="login.html" class="active">Вход</a></li>
-                    <li><a href="registration.html">Регистрация</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header class="main-header"></header>
 
     <div class="container">
         <div class="auth-form-container">
@@ -50,6 +37,7 @@
         </div>
     </div>
     
+    <script src="assets/js/header.js"></script>
     <script src="assets/js/login.js"></script>
 </body>
 </html>
