attaching-photo view photos

--- a/application-details.html
+++ b/application-details.html
@@ -14,7 +14,7 @@
             <div class="application-details-header">
                 <h2>Просмотр заявки на пропуск занятий</h2>
                 <div class="application-actions">
-                    <a href="applications.html" class="btn btn-secondary">Назад к списку</a>
+                    <a href="applications.html" class="btn btn-secondary" style="text-decoration: none;">Назад к списку</a>
                     <button id="delete-application-btn" class="btn btn-danger student-only">Удалить</button>
                 </div>
             </div>
