--- a/applications.html
+++ b/applications.html
@@ -15,7 +15,7 @@
             <div class="applications-header">
                 <h2>Заявки на пропуск занятий</h2>
                 <div class="applications-actions">
-                    <a href="application.html" id="create-application-btn" class="btn btn-primary">Создать заявку</a>
+                    <a href="application.html" id="create-application-btn" class="btn btn-primary" style="text-decoration: none;">Создать заявку</a>
                     <button id="export-applications-btn" class="btn btn-secondary">Экспорт</button>
                 </div>
             </div>
