photo-view change

--- a/applications.html
+++ b/applications.html
@@ -26,8 +26,8 @@
                     <select id="status-filter">
                         <option value="all">Все</option>
                         <option value="inProcess">На проверке</option>
-                        <option value="approved">Одобрено</option>
-                        <option value="rejected">Отклонено</option>
+                        <option value="Accepted">Одобрено</option>
+                        <option value="Rejected">Отклонено</option>
                     </select>
                 </div>
                 <div class="filter-group">
