--- a/application-details.html
+++ b/application-details.html
@@ -86,6 +86,24 @@
         </div>
     </div>
 
+    <!-- Модальное окно для комментария при изменении статуса -->
+    <div id="comment-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h3 id="comment-modal-title">Добавить комментарий</h3>
+            <form id="comment-form">
+                <div class="form-group">
+                    <label for="status-comment">Комментарий:</label>
+                    <textarea id="status-comment" rows="4" placeholder="Введите комментарий"></textarea>
+                </div>
+                <div class="form-actions">
+                    <button type="button" id="cancel-comment-btn" class="btn btn-secondary">Отмена</button>
+                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="assets/js/header.js"></script>
     <script src="assets/js/application-details.js"></script>
 </body>
